css/styles.css
/* https://websiddu.github.io/technology-icons/ */
@font-face {
    font-family:"technology-icons";
    src:url("../fonts/technology-icons.eot");
    font-weight:normal;
    font-style:normal;
}@font-face {
	font-family:"technology-icons";
	src:url("../fonts/technology-icons.eot");
	src:url("../fonts/technology-icons.eot?#iefix") format("embedded-opentype"),
		url("../fonts/technology-icons.woff") format("woff"),
		url("../fonts/technology-icons.ttf") format("truetype"),
		url("../fonts/technology-icons.svg?#technology-icons") format("svg");
	font-weight:normal;
	font-style:normal;
}

[class^="icon-"]:before,
[class*=" icon-"]:before {
	font-family:"technology-icons";
	display:inline-block;
	vertical-align:middle;
	line-height:1;
	font-weight:normal;
	font-style:normal;
	speak:none;
	text-decoration:inherit;
	text-transform:none;
	text-rendering:optimizeLegibility;
	-webkit-font-smoothing:antialiased;
	-moz-osx-font-smoothing:grayscale;
}
 

/* Icons */ 
.icon-aftereffects:before {
	content:"\f101";
}
 
.icon-bridge:before {
	content:"\f102";
}
 
.icon-dreamweaver:before {
	content:"\f103";
}
 
.icon-fireworks:before {
	content:"\f104";
}
 
.icon-flash:before {
	content:"\f105";
}
 
.icon-illustrator:before {
	content:"\f106";
}
 
.icon-indesign:before {
	content:"\f107";
}
 
.icon-lightroom:before {
	content:"\f108";
}
 
.icon-photoshop:before {
	content:"\f109";
}
 
.icon-cockpit:before {
	content:"\f10a";
}
 
.icon-drupal:before {
	content:"\f10b";
}
 
.icon-joomla:before {
	content:"\f10c";
}
 
.icon-magento:before {
	content:"\f10d";
}
 
.icon-october:before {
	content:"\f10e";
}
 
.icon-wordpress:before {
	content:"\f10f";
}
 
.icon-visual-studio:before {
	content:"\f110";
}
 
.icon-bootstrap:before {
	content:"\f111";
}
 
.icon-emmet:before {
	content:"\f112";
}
 
.icon-less:before {
	content:"\f113";
}
 
.icon-postcss:before {
	content:"\f114";
}
 
.icon-sass:before {
	content:"\f115";
}
 
.icon-cassandra:before {
	content:"\f116";
}
 
.icon-database:before {
	content:"\f117";
}
 
.icon-hadoop:before {
	content:"\f118";
}
 
.icon-mariadb:before {
	content:"\f119";
}
 
.icon-mongodb:before {
	content:"\f11a";
}
 
.icon-mysql-alt:before {
	content:"\f11b";
}
 
.icon-mysql:before {
	content:"\f11c";
}
 
.icon-postgres:before {
	content:"\f11d";
}
 
.icon-sql:before {
	content:"\f11e";
}
 
.icon-sublime:before {
	content:"\f11f";
}
 
.icon-express:before {
	content:"\f120";
}
 
.icon-grails:before {
	content:"\f121";
}
 
.icon-grailsalt:before {
	content:"\f122";
}
 
.icon-laravel-alt:before {
	content:"\f123";
}
 
.icon-laravel:before {
	content:"\f124";
}
 
.icon-phonegap:before {
	content:"\f125";
}
 
.icon-platter:before {
	content:"\f126";
}
 
.icon-playframework:before {
	content:"\f127";
}
 
.icon-rails-alt:before {
	content:"\f128";
}
 
.icon-rails:before {
	content:"\f129";
}
 
.icon-jira-alt:before {
	content:"\f12a";
}
 
.icon-jira:before {
	content:"\f12b";
}
 
.icon-angular:before {
	content:"\f12c";
}
 
.icon-backbone:before {
	content:"\f12d";
}
 
.icon-d3:before {
	content:"\f12e";
}
 
.icon-ember:before {
	content:"\f12f";
}
 
.icon-jquery-alt:before {
	content:"\f130";
}
 
.icon-jquery:before {
	content:"\f131";
}
 
.icon-react:before {
	content:"\f132";
}
 
.icon-c:before {
	content:"\f133";
}
 
.icon-cplusplus:before {
	content:"\f134";
}
 
.icon-csharp:before {
	content:"\f135";
}
 
.icon-haskell:before {
	content:"\f136";
}
 
.icon-java:before {
	content:"\f137";
}
 
.icon-nodejs:before {
	content:"\f138";
}
 
.icon-objectivec:before {
	content:"\f139";
}
 
.icon-perl:before {
	content:"\f13a";
}
 
.icon-php-alt:before {
	content:"\f13b";
}
 
.icon-php:before {
	content:"\f13c";
}
 
.icon-python:before {
	content:"\f13d";
}
 
.icon-ruby:before {
	content:"\f13e";
}
 
.icon-scala:before {
	content:"\f13f";
}
 
.icon-debian:before {
	content:"\f140";
}
 
.icon-fedora:before {
	content:"\f141";
}
 
.icon-freebsd:before {
	content:"\f142";
}
 
.icon-gnome:before {
	content:"\f143";
}
 
.icon-java-duke:before {
	content:"\f144";
}
 
.icon-kde:before {
	content:"\f145";
}
 
.icon-linux-mint:before {
	content:"\f146";
}
 
.icon-netbsd:before {
	content:"\f147";
}
 
.icon-rasbaerrypi:before {
	content:"\f148";
}
 
.icon-redhat:before {
	content:"\f149";
}
 
.icon-solaris:before {
	content:"\f14a";
}
 
.icon-suse:before {
	content:"\f14b";
}
 
.icon-ubuntu:before {
	content:"\f14c";
}
 
.icon-autoit:before {
	content:"\f14d";
}
 
.icon-browsersync:before {
	content:"\f14e";
}
 
.icon-confluence:before {
	content:"\f14f";
}
 
.icon-dynamicweb:before {
	content:"\f150";
}
 
.icon-babel:before {
	content:"\f151";
}
 
.icon-webpack:before {
	content:"\f152";
}
 
.icon-osx:before {
	content:"\f153";
}
 
.icon-codeignitor:before {
	content:"\f154";
}
 
.icon-composer:before {
	content:"\f155";
}
 
.icon-zend:before {
	content:"\f156";
}
 
.icon-apache:before {
	content:"\f157";
}
 
.icon-jetty:before {
	content:"\f158";
}
 
.icon-memcached:before {
	content:"\f159";
}
 
.icon-nginx-alt:before {
	content:"\f15a";
}
 
.icon-nginx:before {
	content:"\f15b";
}
 
.icon-redis:before {
	content:"\f15c";
}
 
.icon-tomcat:before {
	content:"\f15d";
}
 
.icon-ec3:before {
	content:"\f15e";
}
 
.icon-github-circle-alt:before {
	content:"\f15f";
}
 
.icon-github-circle:before {
	content:"\f160";
}
 
.icon-github:before {
	content:"\f161";
}
 
.icon-google-code:before {
	content:"\f162";
}
 
.icon-heroku:before {
	content:"\f163";
}
 
.icon-shell-alt:before {
	content:"\f164";
}
 
.icon-shell:before {
	content:"\f165";
}
 
.icon-shellscript:before {
	content:"\f166";
}
 
.icon-opensource:before {
	content:"\f167";
}
 
.icon-bower:before {
	content:"\f168";
}
 
.icon-grunt:before {
	content:"\f169";
}
 
.icon-gulp:before {
	content:"\f16a";
}
 
.icon-selenium:before {
	content:"\f16b";
}
 
.icon-git-squared:before {
	content:"\f16c";
}
 
.icon-git:before {
	content:"\f16d";
}
 
.icon-svn:before {
	content:"\f16e";
}
 
.icon-css-alt:before {
	content:"\f16f";
}
 
.icon-css3-alt:before {
	content:"\f170";
}
 
.icon-css3:before {
	content:"\f171";
}
 
.icon-html5:before {
	content:"\f172";
}
 
.icon-js:before {
	content:"\f173";
}


section.column-header{
    display: flex;
    width: 100%;
    height: 25%;
    align-items: center;
}
div.header-info{
    width: 100%;
}
ul{
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    justify-content: center;
}
ul.contact-info{

width: 100%;
margin-top: 20px;
border: 1px solid darkgray;
padding: 10px;
}

ul.contact-info> li{
    width: 50%;
    margin: 10px -10px;
    font-size: 14px;
}
body{
    background-color: lightgrey;
    font-size: 18px;

}
h1,h2, #technologies h3,  #technologies li{

    text-shadow: -2px 1px 5px #766f6fc7;

}

.name{
    color: darkblue;
font-size: 45px;
letter-spacing: 2.5px;
}
.position{
    font-size: 30px;
    color: #007bff;;
    letter-spacing: 2.1px;

}
ul.recent-projects{
    flex-direction: column;
}

section.column-header div.img-wrapper{
    border-radius: 100%;
    border: solid 1px black;
    overflow: hidden;
    height: 175px;
    width: 175px;

}
section.column-header div.img-wrapper img{
    width: 100%;
}
.name, .position{
    text-transform: uppercase;
    margin: 0;
}
div.column > section{
margin: 0 15px;

}
.section-heading{
    text-transform: uppercase;
    font-weight: 700;
    border-bottom: solid 4px darkblue;
    color: darkblue;
    margin: 0 auto;
}

section.left-column-header{
    justify-content: center;
}
main{
flex-wrap: wrap;
display: flex;
width: 100%;
}


div.left-col{
    width: 65%;

}
div.right-col{
    width: 30%;
}

div.column section {
    width: 80%;
    margin: 0 auto;
}


 li.tech-subgroup{
     width: 100%;
     border: 2px solid white;
     border-radius: 10px;
     margin: 3px 0;
 }

 


 li.tech-subgroup > ul{
    justify-content: space-evenly;
     flex-wrap: wrap;

 }
 li.tech-subgroup > ul > li{
     width: 40%;
     font-size: 16px;
     margin: 10px;
     padding: 10px;
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
 }
 li.tech-subgroup > ul > li{
     font-weight: 500;
     width: 26%;
     align-items: center;
     margin: 10px;
     padding: 10px;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 li.tech-subgroup h3 {
    text-align: center;
    text-transform: capitalize;
    margin: 15px auto;
    width: auto;
    font-size: 22px;
    /* padding: 5px 0 5px 20px; */

 }
#technologies{
    width: 100%;
    padding-top: 0;
}
#technologies > h2.section-heading{
    width: 80%;
}

#exp i, #technologies i, svg, svg path {
    color: #5f01a7;
    fill: #5f01a7 !important;
  
}
#exp .job-card h5{
    margin-top:10px;
}
#technologies i, #technologies svg, #technologies svg path {
    color: #5f01a7;
    fill: #5f01a7 !important;
    font-weight: bold;
    display: inline-block;

    }
a{
    color: black;
    font-weight: 500;
}
i{
    color: orange;
    padding-right: 5px;
}
ul.job-highlights  {
    list-style: circle;
    justify-content: start;
    margin: 10px;
}
ul.job-highlights > li{
margin: 10px;

}
p.project-description {
    padding: 5px 15px;
    margin: 5px 0;
}
span.date-range{
text-transform: uppercase;

}
h3.project-title {
    margin: 10px;
    color: #3c3232;
    font-size: 1.5rem;
}
#recent-project .job-card{
   border: 1px solid black;
   border-radius: 15px;
   margin: 5px;
}
a.project-link {
    margin: 10px;
    text-align: center;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}
li.project {
    width: 90%;
}
section.column-header {

    height: 260px;
}
div.column section.objective-summary{
    width: 100%;
    text-align: center;
}
section.objective-summary > p {
    font-size: 18px;
    margin-top: -25px;

}
ul.exp-jobs {
    margin-top: 10px;
}
pre{
  font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
  margin:  auto;
	margin-bottom: 10px;
  overflow: hidden;
  width: auto;
  padding: 5px;
  background-color: #eee;
  max-width: 250px;
  padding-bottom: 20px;
  max-height: 250px;
}

@media print{
    h4.project-link{
        display: none;
    }
}
@media(min-width: 768px){
    main{
        width: 80%;
        margin: 0 auto;
        }
}
@media(min-width: 991px){
    main{ width: 70%;}
}

